# oneil_breakout

./: .gitignore  BACKTEST_README.md  CLAUDE.md  FINAL_SUMMARY.md  QUICKSTART.md  README.md  README_SMART.md  README_UNIFIED.md  WHICH_VERSION.md  config.example.py  config.py  oneil_backtest.py  oneil_backtest_2.py  oneil_breakout_bot.py  oneil_breakout_bot_kr.py  oneil_breakout_bot_smart.py  oneil_breakout_bot_smart_with_positions.py  oneil_breakout_bot_unified.py  oneil_breakout_bot_v2_always_scan.py  pyproject.toml  requirements.txt  test_kr_stock.py  test_scan.py  test_telegram.py  watchlist.json
archive/: POSITION_TRACKING_GUIDE.md  QUICK_FIX.md  README_V2.md  TROUBLESHOOTING.md  WHICH_VERSION_V2.md  oneil_breakout_bot_smart.py  변경사항_최종.md
src/oneil_breakout/: __init__.py  __main__.py
src/oneil_breakout/backtest/: __init__.py  engine.py
src/oneil_breakout/bot/: __init__.py  detector.py
src/oneil_breakout/config/: __init__.py  settings.py
src/oneil_breakout/data/: __init__.py  kr_stock.py  us_stock.py
src/oneil_breakout/market/: __init__.py  status.py
src/oneil_breakout/patterns/: __init__.py  base.py  cup_handle.py  pivot.py
src/oneil_breakout/positions/: __init__.py  manager.py
src/oneil_breakout/telegram/: __init__.py  client.py  formatter.py
src/oneil_breakout/watchlist/: __init__.py  manager.py
